--- a/calculatrice.css
+++ b/calculatrice.css
@@ -38,6 +38,8 @@ span{
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+    user-select: none;
+    cursor: pointer;
 }
 
 #reset{
